la introduccion mas o menos esta, la tabla de tokens tambien, y la gramatica ahora vemos

--- a/TPTlen/Informe/lagramatica.tex
+++ b/TPTlen/Informe/lagramatica.tex
@@ -4,6 +4,8 @@ Aclaraciones: no se considera var nada reservado, escribilo mejor
 
 las expresiones regulares siguen los simbolos que entiende ply
 
+CCMM Cualquier Combinación de mayúsculas y minúsculas
+
 \subsection{Tokens}
 
 \begin{table}[!htb]
@@ -12,15 +14,16 @@ las expresiones regulares siguen los simbolos que entiende ply
 \hline
 Nom Token & Símbolo representado & Expr Regular\\
 \hline
-STR 	& cadena de caracteres entre comillas dobles & "[\^"]*" \\
+STR 	& cadena de caracteres entre comillas dobles & "[$\wedge$"]*" \\
 \hline
-BOOL & true o false & ([tT][rR][uU][eE] | \\
+BOOL & true o false & ([tT][rR][uU][eE] $\mid$ \\
 
 	& 				& [fF][aA][lL][sS][eE]) \\
 \hline
 NUM 	& cualquier cadena numérica & [0-9]+ \\
 \hline
-VAR 	& cadena alfanumérica con '_' que comienza en una letra & [a-zA-Z][a-zA-Z0-9_] \\
+VAR 	& cadena alfanumérica con '_' que  & [a-zA-Z][a-zA-Z0-9_] \\
+	& comienza en una letra				&	\\
 \hline
 PUNTO & '.' & . \\
 \hline
@@ -56,49 +59,51 @@ POR & '*' & * \\
 \hline
 DIV & '/' & / \\
 \hline
-POT & '\^' & \^ \\
+POT & '$\wedge$' & $\wedge$  \\
 \hline
 MOD & '\% ' & \% \\
 \hline
-MAYOR & '\>' & \> \\
+MAYOR & '$>$' & $>$ \\
 \hline
-MENOR & '<' & 2 \\
+MENOR & '$<$' & $<$ \\
 \hline
-COMENT &'\# ' seguido de cualquier cadena de caracteres, hasta el primer salto de línea & 2 \\
+COMENT &'\# ' y cualquier cadena de caracteres, & \#.* \\
+		&  hasta el primer salto de línea		&	\\
 \hline
-BEGIN & 'begin' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+BEGIN & 'begin' CCMM &  [bB][Ee][gG][iI][nN]\\
 \hline
-END & 'end' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+END & 'end' CCMM & [eE][nN][dD] \\
 \hline
-WHILE & 'while' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+WHILE & 'while' CCMM & [wW][hH][iI][lL][eE] \\
 \hline
-FOR & 'for' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+FOR & 'for' CCMM & [fF][oO][rR] \\
 \hline
-IF & 'if' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+IF & 'if' CCMM & [iI][fF] \\
 \hline
-ELSE & 'else' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+ELSE & 'else' CCMM & [eE][lL][sS][eE] \\
 \hline
-DO & 'do' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+DO & 'do' CCMM & [dD][Oo] \\
 \hline
-RES & 'res' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+RES & 'res' CCMM & [rR][eE][sS] \\
 \hline
-RETURN & 'return' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+RETURN & 'return' CCMM & [rR][eE][tt][uU][rR][nN] \\
 \hline
-AND & 'and' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+AND & 'and' CCMM & [aA][nN][dD] \\
 \hline
-OR & 'or' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+OR & 'or' CCMM & [oO][rR] \\
 \hline
-NOT 	& 'not' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+NOT 	& 'not' CCMM & [nN][oO][tT] \\
 \hline
-PRINT & 'print' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+PRINT & 'print' CCMM & [pP][rR][iI][nN][tT] \\
 \hline
-MULTESC & 'multiplicacionescalar' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+MULTESC & 'multiplicacionescalar' CCMM & [mM][uU][lL][tT][iI][pP][lL][iI][cC][aA] \\
+ & & [cC][iI][oO][nN][eE][sS][cC][aA][Ll][aA][rR] \\
 \hline
-CAP & 'capitalizar' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+CAP & 'capitalizar' CCMM & [cC][aA][Pp][iI][tT][aA][lL][iI][zZ][aA][rR] \\
 \hline
-COLIN & 'colineales' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+COLIN & 'colineales' CCMM & [cC][oO][lL][iI][nN][eE][aA][lL][eE][sS] \\
 \hline
-LENGTH & 'length' en cualquier combinación de mayúsculas y minúsculas & 2 \\
+LENGTH & 'length' CCMM & [lL][eE][nN][gG][tT][hH] \\
 \hline
 
 \end{tabular}
@@ -108,5 +113,329 @@ LENGTH & 'length' en cualquier combinación de mayúsculas y minúsculas & 2 \\
 
 %\vspace*{0.5cm}
 
+\newpage
 
 \subsection{Primer Gramatica}
+
+
+\begin{verbatim}
+
+
+
+#----------------------------------------------------#
+def p_inicial(expr):
+	'start : codigo'
+#----------------------------------------------------#
+
+def p_constante_valor(cte):
+	'''constante : STR	
+				| BOOL
+				| numero
+				| LPAREN constante RPAREN'''
+
+#----------------------------------------------------#
+
+def p_constante_funcion(f):
+	'constante : funcion'
+
+#----------------------------------------------------#
+def p_variable(expr):
+	'''variable : VAR
+				| RES
+				| VAR LCORCH z RCORCH
+				| LPAREN variable RPAREN
+				| VAR PUNTO VAR'''
+#----------------------------------------------------#
+def p_numero(num):
+	'''numero : NUM
+			| NUM PUNTO NUM
+			| MAS NUM
+			| MAS NUM PUNTO NUM
+			| MENOS NUM
+			| MENOS NUM PUNTO NUM'''
+#----------------------------------------------------#
+def p_zeta(expr):
+	'''z : zso
+		| operacion'''
+#----------------------------------------------------#
+
+def p_zeta_sin_oper(expr):
+	'''zso : variable
+			| constante
+			| vector
+			| registro'''
+
+#----------------------------------------------------#
+
+def p_ge(expr):
+	'''g : variable
+		| constante 
+		| relacion
+		| logico'''
+
+#----------------------------------------------------#
+def p_vector(expr):
+	'''vector : LCORCH z separavec RCORCH
+			| LPAREN vector RPAREN'''			
+#----------------------------------------------------#
+
+def p_separavector(expr):
+	'''separavec : empty
+				| COMA z separavec'''
+
+#----------------------------------------------------#
+def p_registro(expr):
+	'''registro : LLLAVE RLLAVE
+				| LLLAVE VAR DOSPTOS z separareg RLLAVE
+				| LPAREN registro RPAREN'''
+
+#----------------------------------------------------#
+
+def p_separaregistro(expr):
+	'''separareg : empty
+				| COMA VAR DOSPTOS z separareg'''
+
+#----------------------------------------------------#
+
+def p_asignacion(expr):
+	'''asignacion : variable operasig z
+				| variable operasig ternario'''
+#----------------------------------------------------#
+
+def p_operasig(op):
+	'''operasig : IGUAL
+				| MAS IGUAL
+				| MENOS IGUAL
+				| POR IGUAL
+				| DIV IGUAL'''
+
+#----------------------------------------------------#
+
+def p_matematico(expr):
+	'''matematico : matprim operMatBinario matf
+				| LPAREN matematico RPAREN'''
+
+#----------------------------------------------------#
+
+def p_matprim(expr):		   
+	'''matprim : matprim operMatBinario matf
+				| matf'''
+
+#----------------------------------------------------#
+
+def p_matf(expr):
+	'''matf : zso
+			| LPAREN matematico RPAREN'''
+
+#----------------------------------------------------#
+
+def p_operMatBinario(op):
+	'''operMatBinario : MAS
+					| MENOS
+					| POR
+					| POT
+					| MOD
+					| DIV'''
+
+#----------------------------------------------------#
+
+def p_autoincdec(expr):
+	'''autoincdec : operMatUnario variable
+				| variable operMatUnario'''
+
+#----------------------------------------------------#
+
+
+def p_operMatUnario(op):
+	'''operMatUnario : MAS MAS
+					| MENOS MENOS'''
+
+#----------------------------------------------------#
+
+def p_relacion(expr):
+	'''relacion : relprim operRelacion relf
+			  | LPAREN relacion RPAREN'''
+
+#----------------------------------------------------#
+
+def p_relprim(expr):		   
+	'''relprim : relprim operRelacion relf
+				| relf'''
+
+#----------------------------------------------------#
+
+def p_relf(expr):
+	'''relf : zso
+			| matematico
+			| LPAREN relacion RPAREN
+			| LPAREN logico RPAREN'''
+
+#----------------------------------------------------#
+
+def p_operRelacion(op):
+	'''operRelacion : IGUAL IGUAL
+					| ADM IGUAL
+					| MAYOR
+					| MENOR'''
+
+
+#----------------------------------------------------#
+
+def p_logico(expr):
+	'''logico : logprim operLogicoBinario logf
+			  | LPAREN logico RPAREN
+			  | NOT z'''
+
+#----------------------------------------------------#
+
+def p_logprim(expr):
+	'''logprim : logprim operLogicoBinario logf
+				| logf'''
+
+#----------------------------------------------------#
+
+def p_logf(expr):
+	'''logf : zso
+			| relacion
+			| LPAREN logico RPAREN'''
+
+
+#----------------------------------------------------#
+
+def p_operLogBinario(op):
+	'''operLogicoBinario : AND
+						| OR'''
+
+#----------------------------------------------------#
+
+def p_ternario(expr):
+	'''ternario : g PREG z DOSPTOS z
+				| g PREG ternario DOSPTOS ternario'''
+
+
+#----------------------------------------------------#
+
+def p_operacion(expr):
+	'''operacion : matematico
+				| relacion
+				| logico'''
+
+
+#----------------------------------------------------#
+
+def p_sentencia_(expr):
+	'''sentencia : asignacion PTOCOMA
+				| PRINT z PTOCOMA
+				| autoincdec PTOCOMA'''
+
+#----------------------------------------------------#
+
+def p_funcion_multesc(expr):
+	'''funcion : MULTESC LPAREN z COMA z RPAREN
+				| MULTESC LPAREN z COMA z COMA z RPAREN'''
+
+#----------------------------------------------------#
+
+def p_funcion_cap(expr):
+	'funcion : CAP LPAREN z RPAREN'
+
+#----------------------------------------------------#
+
+def p_funcion_colin(expr):
+	'funcion : COLIN LPAREN z COMA z RPAREN'
+
+#----------------------------------------------------#
+
+def p_funcion_length(expr):
+	'funcion : LENGTH LPAREN z RPAREN'
+
+#----------------------------------------------------#
+
+def p_stmt(expr):
+	'''stmt : closedstmt
+			| openstmt'''
+
+#----------------------------------------------------#
+
+def p_closedstmt(expr):
+	'''closedstmt : sentencia 
+				| LLLAVE codigo RLLAVE
+				| dowhile 
+				| IF LPAREN g RPAREN closedstmt ELSE closedstmt
+				| loopheader closedstmt
+				| comentario closedstmt
+				'''
+
+
+#----------------------------------------------------#
+
+def p_openstmt(expr):
+	'''openstmt : IF LPAREN g RPAREN stmt
+				| IF LPAREN g RPAREN closedstmt ELSE openstmt
+				| loopheader openstmt
+				| comentario openstmt'''
+
+#----------------------------------------------------#
+
+def p_bucle(expr):
+	'''loopheader : for
+				| while'''
+
+#----------------------------------------------------#
+
+def p_for_sinasig(expr):
+	'''for : FOR LPAREN PTOCOMA g PTOCOMA RPAREN
+			| FOR LPAREN PTOCOMA g PTOCOMA asignacion RPAREN 
+			| FOR LPAREN PTOCOMA g PTOCOMA autoincdec RPAREN'''
+
+#----------------------------------------------------#
+
+def p_for_conasig(expr):
+	'''for : FOR LPAREN asignacion PTOCOMA g PTOCOMA RPAREN
+			| FOR LPAREN asignacion PTOCOMA g PTOCOMA asignacion RPAREN
+			| FOR LPAREN asignacion PTOCOMA g PTOCOMA autoincdec RPAREN'''
+
+
+#----------------------------------------------------#
+
+def p_while(expr):
+	'while : WHILE LPAREN g RPAREN'
+
+#----------------------------------------------------#
+
+def p_dowhile(expr):
+	'dowhile : DO stmt WHILE LPAREN g RPAREN PTOCOMA'
+
+#----------------------------------------------------#
+
+def p_codigo(expr):
+	'''codigo : stmt codigo
+		    | stmt
+		    | comentario'''
+
+#----------------------------------------------------#
+
+def p_comentario(expr):
+	'comentario : COMENT'
+
+#----------------------------------------------------#
+
+def p_empty(p):
+	'empty :'
+	pass
+
+#----------------------------------------------------#
+
+def p_error(token):
+    message = "[Syntax error]"
+    if token is not None:
+        message += "\ntype:" + token.type
+        message += "\nvalue:" + str(token.value)
+        message += "\nline:" + str(token.lineno)
+        message += "\nposition:" + str(token.lexpos)
+    raise Exception(message)
+
+
+#----------------------------------------------------#
+
+\end{verbatim}
