siguiendo el informe

--- a/TPTlen/Informe/informe.tex
+++ b/TPTlen/Informe/informe.tex
@@ -82,7 +82,7 @@
 
 \input{introduccion}
 
-\newpage
+%\newpage
 
 \input{lagramatica}
 
@@ -93,7 +93,7 @@
 
 \newpage
 
-\section{Cómo correr}
+\input{comocorrer}
 
 \newpage
 
