--- a/TPTlen/Informe/introduccion.tex
+++ b/TPTlen/Informe/introduccion.tex
@@ -1,4 +1,4 @@
 \section{Introducción}
 
-En el presente trabajo, se pretende desarrollar un analizador léxico y sintáctico para un lenguaje de scripting, denominado Simple Lenguaje de Scripting (SLS). El mismo, recibirá un codigo fuente como entrada, el cual deberá chequear si cumple la sintaxis y restricciones de tipado del lenguaje, para luego formatear el código con la ‘indentación’ adecuada para SLS. En caso de haberse detectado algún error, se informará claramente cuáles son las características del mismo.
+En el presente trabajo, se pretende desarrollar un analizador léxico y sintáctico para un lenguaje de scripting, denominado Simple Lenguaje de Scripting (SLS). El mismo, recibirá un codigo fuente como entrada, y deberá chequear si cumple la sintaxis y restricciones de tipado del lenguaje, para luego formatear el código con la ‘indentación’ adecuada para SLS. En caso de haberse detectado algún error, se informará claramente cuáles son las características del mismo.
 Las características del SLS se encuentran en el enunciado de este trabajo práctico.
