seguimos con el coso

--- a/TPTlen/Informe/comocorrer.tex
+++ b/TPTlen/Informe/comocorrer.tex
@@ -1,1 +1,27 @@
-\section{Cómo correr}
+\section{Ejecución}
+
+\subsection{Requerimientos}
+
+Para ejecutar el parser se requiere contar con el siguiente software:
+
+\begin{itemize}
+\item Python 2.7 (o superior)
+\item Python-PLY 3.6 (o superior)
+\end{itemize}
+
+Las pruebas se realizaron sobre Ubuntu 14.04.
+
+\subsection{Cómo correr}
+
+Se provee el código fuente de este parser, el cual consta de los siguientes archivos:
+
+\begin{itemize}
+\item expressions.py
+\item lexer_rules.py
+\item parser_rules.py
+\item parser.py
+\item SLSParser.sh
+\end{itemize}
+
+Para correr el programa, es necesario que todos los archivos fuente se encuentren en el mismo directorio.
+
