los tex de todo

--- a/TPTlen/Informe/informe.tex
+++ b/TPTlen/Informe/informe.tex
@@ -89,7 +89,7 @@
 
 \newpage
 
-\section{La solución}
+\input{descripcionsol} 
 
 \newpage
 
@@ -97,15 +97,15 @@
 
 \newpage
 
-\section{Casos de Prueba}
+\input{casosdeprueba}
 
 \newpage
 
-\section{Resultados}
+\input{resultados}
 
 \newpage
 
-\section{Conclusiones}
+\input{conclusiones}
 
 \end{document}
 
