--- a/TPTlen/Informe/casosdeprueba.tex
+++ b/TPTlen/Informe/casosdeprueba.tex
@@ -1,1 +1,82 @@
 \section{Casos de Prueba}
+
+En esta sección se mostrará un subconjunto de las pruebas que se realizaron para probar el correcto funcionamiento del parser. En caso de que la expresión sintáctica sea correcta, se mostrará lo que el parser develve, y en caso de no serlo se explicará el por que.
+
+\subsection{Casos Sintácticamente Correctos}
+
+\begin{verbatim}
+Prueba1:
+a = true;#algo \n b=5; #algo \nfor (;a;b++) #algo \n if( a ) #algo \n {b=a; #algo \n if (b) b=a;#algo \n} else c = 8;#algo \n
+
+Resultado:
+a = True;
+#algo 
+b = 5;
+#algo 
+for( ; a; b++)
+	#algo 
+	if(a)
+		#algo 
+		{
+		b = a;
+		#algo 
+			if(b)
+				b = a;
+		#algo }
+	else
+		c = 8;
+#algo 
+
+Prueba2:
+
+a=3; a++; a--; a += 6; a -= 5; a *= 3; print (length( \"pelado\")); b= (a==8); if (b) a= a; c = a==8? a:a;
+
+Resultado:
+
+a = 3;
+a++;
+a--;
+a += 6;
+a -= 5;
+a *= 3;
+print (length("pelado"));
+b = (a == 8);
+if(b)
+	a = a;
+c = a == 8 ? a : a;
+
+Prueba3:
+a[3+5] = 2*3; a[length(a)] = 2; a[2] = a [10%3]; b = [3, length(a), a[5]]; b[4] = length(b);
+
+Resultado:
+
+a[3 + 5] = 2 * 3;
+a[length(a)] = 2;
+a[2] = a[10 % 3];
+b = [3, length(a), a[5]];
+b[4] = length(b);
+
+
+
+\end{verbatim}
+
+\subsection{Casos Sintácticamente Incorrectos}
+
+\begin{verbatim}
+Prueba1:
+
+a = [2,3,4]; b = [a]; c = length(b); b[2] = [\"pepe\"];
+
+\end{verbatim}
+
+La razón por la cual esta expresión sintáctica es incorrecta es que $b$ es un vector de vectores de enteros, por lo cual no puede recibir en ningún subindice un elemento de tipo cadena. Notar que si $b$ no estuviera inicializado, esa asignación se podría hacer, puesto que estaríamos inicializando $b$ en un vector de cadenas.
+
+\begin{verbatim}
+
+Prueba2:
+
+a = {campo : 3}; a.campo = \"pepe\"; b[a.campo] = 2;
+
+\end{verbatim}
+
+En este caso, si bien en un comienzo $a.campo$ era un entero, la segunda asignación cambia su tipo a cadena, por lo cual no puede ser indice del arreglo $b$.
