--- a/TPTlen/Informe/casosdeprueba.tex
+++ b/TPTlen/Informe/casosdeprueba.tex
@@ -4,7 +4,7 @@ En esta sección se mostrará un subconjunto de las pruebas que se realizaron pa
 
 \subsection{Casos Sintácticamente Correctos}
 
-\begin{verbatim}
+\begin{lstlisting}
 Prueba1:
 a = true;#algo \n b=5; #algo \nfor (;a;b++) #algo \n if( a ) #algo \n {b=a; #algo \n if (b) b=a;#algo \n} else c = 8;#algo \n
 
@@ -26,6 +26,10 @@ for( ; a; b++)
 	else
 		c = 8;
 #algo 
+\end{lstlisting}
+
+\begin{verbatim}
+
 
 Prueba2:
 
@@ -42,7 +46,7 @@ a *= 3;
 print (length("pelado"));
 b = (a == 8);
 if(b)
-	a = a;
+     a = a;
 c = a == 8 ? a : a;
 
 Prueba3:
@@ -56,9 +60,9 @@ a[2] = a[10 % 3];
 b = [3, length(a), a[5]];
 b[4] = length(b);
 
-
-
 \end{verbatim}
+
+
 
 \subsection{Casos Sintácticamente Incorrectos}
 
@@ -69,7 +73,7 @@ a = [2,3,4]; b = [a]; c = length(b); b[2] = [\"pepe\"];
 
 \end{verbatim}
 
-La razón por la cual esta expresión sintáctica es incorrecta es que $b$ es un vector de vectores de enteros, por lo cual no puede recibir en ningún subindice un elemento de tipo cadena. Notar que si $b$ no estuviera inicializado, esa asignación se podría hacer, puesto que estaríamos inicializando $b$ en un vector de cadenas.
+La razón por la cual esta expresión es sintácticamente incorrecta es que $b$ es un vector de vectores de enteros, por lo cual no puede recibir en ningún subindice un elemento de tipo cadena. Notar que si $b$ no estuviera inicializado, esa asignación se podría hacer, puesto que estaríamos inicializando $b$ en un vector de cadenas.
 
 \begin{verbatim}
 
@@ -80,3 +84,14 @@ a = {campo : 3}; a.campo = \"pepe\"; b[a.campo] = 2;
 \end{verbatim}
 
 En este caso, si bien en un comienzo $a.campo$ era un entero, la segunda asignación cambia su tipo a cadena, por lo cual no puede ser indice del arreglo $b$.
+
+\begin{verbatim}
+
+Prueba3:
+
+campo = [{campo:\"1\"}, {campo:\"2\"}, {campo:\"3\"}][1];
+
+\end{verbatim}
+
+Para referenciar una posición de un vector, se debe acceder a el a través de una variable, por lo cual esta expresión será considerada sintacticamente incorrecta.
+
