las conclusiones hechas

--- a/TPTlen/Informe/conclusiones.tex
+++ b/TPTlen/Informe/conclusiones.tex
@@ -1,1 +1,8 @@
 \section{Conclusiones}
+
+Consideramos este trabajo un interesante cierre para la materia, puesto que nos permitió trabajar con una gramática amplia, que presenta mayores desafíos que solucionar un concepto en una gramática con 3 no terminales.
+
+A nivel sintáctico, se presentó un gran desafío para evitar que la gramática sea ambigua, como por ejemplo el problema del dangling else, que no fue solucionado solamente con la respuesta de un libro, ya que la amplitud de la gramática causó conflictos en otras regiones, y requirió astucia y perseverancia hasta acomodar la gramática de manera tal que esta no tenga ambigüedades.
+
+A nivel semántico, se tuvieron que tomar varias decisiones que debían congeniar y formar una estructura coherente, lo cual en una gramática de esta amplitud no fue trivial.
+
