ya casi ya casi.... sacalasacalasacalagit add -i

--- a/TPTlen/Informe/casosdeprueba.tex
+++ b/TPTlen/Informe/casosdeprueba.tex
@@ -6,7 +6,8 @@ En esta sección se mostrará un subconjunto de las pruebas que se realizaron pa
 
 \begin{lstlisting}
 Prueba1:
-a = true;#algo \n b=5; #algo \nfor (;a;b++) #algo \n if( a ) #algo \n {b=a; #algo \n if (b) b=a;#algo \n} else c = 8;#algo \n
+a = true;#algo \n b=5; #algo \nfor (;a;b++) #algo \n 
+if( a ) #algo \n {b=a; #algo \n if (b) b=a;#algo \n} else c = 8;#algo \n
 
 Resultado:
 a = True;
@@ -33,7 +34,8 @@ for( ; a; b++)
 
 Prueba2:
 
-a=3; a++; a--; a += 6; a -= 5; a *= 3; print (length( \"pelado\")); b= (a==8); if (b) a= a; c = a==8? a:a;
+a=3; a++; a--; a += 6; a -= 5; a *= 3; print (length( \"pelado\"));
+b= (a==8); if (b) a= a; c = a==8? a:a;
 
 Resultado:
 
