--- a/TPTlen/Informe/conclusiones.tex
+++ b/TPTlen/Informe/conclusiones.tex
@@ -6,3 +6,4 @@ A nivel sintáctico, se presentó un gran desafío para evitar que la gramática
 
 A nivel semántico, se tuvieron que tomar varias decisiones que debían congeniar y formar una estructura coherente, lo cual en una gramática de esta amplitud no fue trivial.
 
+En conclusión, fue un trabajo muy interesante y con más desafíos de los esperados.
